[package]
name = "adp5360"
version = "0.2.1"
edition = "2021"
authors = ["Mattia Fiumara"]
description = "An async embedded-hal driver for the ADP5360 Power Management IC"
repository = "https://github.com/mfiumara/adp5360-rs"
license = "MIT"
keywords = [
    "embedded-hal-driver",
    "embedded",
    "async",
    "battery",
    "power-management",
]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal-async = "1.0.0"
bitflags = { version = "2.6", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
embedded-hal-mock = { version = "0.11", features = ["embedded-hal-async"] }
